Fixed logo positioning on mobile size

--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_frontpage.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_frontpage.scss
@@ -18,6 +18,7 @@
 
     .col-icon {
         padding-left: 0px;
+        padding-right: 0px;
         text-align: right;
 
         @media (max-width: $screen-md-min) {
