--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
@@ -44,7 +44,7 @@ nav {
 
     h4 {
       float:right;
-      margin-top: 23px;
+      margin-top: 14px;
       margin-left: 15px;
       color: $blue;
       font-family: Campton;
@@ -189,15 +189,7 @@ nav {
 }
 
 @media(max-width: 350px) {
-    .navbar .navbar-brand {
-        h4 {
-            font-size: 18px;
-            margin-top: 29px;
-        }
-        img {
-            width: 50px;
-            height: 50px;
-            margin-top: 12px;
-        }
+    .navbar {
+        padding-right: 0;
     }
 }
